[gd_scene load_steps=8 format=3 uid="uid://bdpkkjhu336vw"]

[ext_resource type="Script" path="res://scenes/notes/note.gd" id="1_1150e"]
[ext_resource type="PackedScene" uid="uid://rd31xnvoq5y6" path="res://scenes/notes/assets/letter.fbx" id="2_k4hib"]
[ext_resource type="Script" path="res://environment/items/float.gd" id="3_iwdko"]
[ext_resource type="AudioStream" uid="uid://t5whlfuqx6hn" path="res://scenes/notes/assets/paper_pick_up_one_shot.wav" id="4_77ivk"]
[ext_resource type="AudioStream" uid="uid://bj0w2b8s83olj" path="res://scenes/notes/assets/paper_hide_one_shot.wav" id="5_x3eon"]
[ext_resource type="PackedScene" uid="uid://mfbubdrxyy33" path="res://scenes/notes/letterLover.tscn" id="6_5gqkr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7skui"]
size = Vector3(0.42334, 1.27557, 0.447144)

[node name="Item" type="Node3D"]

[node name="Area3D" type="Area3D" parent="."]
script = ExtResource("1_1150e")
text = "I don't know how to reach you anymore. It's like you're deep underwater. Do you still remember how we used to be?

I don't want to believe that it's too late. And I don't want to lose you. But I can't save you if you don't want to be saved.
"
InteractText = "Press [E] to read"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("BoxShape3D_7skui")

[node name="letter" parent="Area3D/CollisionShape3D" instance=ExtResource("2_k4hib")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.281406, 0)
script = ExtResource("3_iwdko")
speed = 0.2
range = 0.15

[node name="OpenSound" type="AudioStreamPlayer" parent="Area3D"]
stream = ExtResource("4_77ivk")
bus = &"SFX"

[node name="CloseSound" type="AudioStreamPlayer" parent="Area3D"]
stream = ExtResource("5_x3eon")
bus = &"SFX"

[node name="Note" parent="Area3D" instance=ExtResource("6_5gqkr")]
visible = false

[connection signal="OnInteract" from="Area3D" to="Area3D" method="_on_interact"]
